--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,7 +31,7 @@ workflows:
       - build:
           filters:
             branches:
-              only: dev
+              only: master
       - deploy:
           requires:
             - build
